[tool.poetry]
name = "neptune-poc"
version = "0.1.0"
description = ""
authors = ["Vitor Martins <vitor.martins@aca.so>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.111.0"
gremlinpython = "3.7.2"
boto3 = "1.28.2"
apscheduler = "3.10.1"
sentry-sdk = {version = "1.39.1", extras = ["fastapi"]}
pydantic-settings = "2.0.3"
orjson = "3.10.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
